# MEDIQA-OE-2025

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
notebooks/: .env.template  01-few_shot.ipynb  02-react_reasoning.ipynb  03_agentic_approach.ipynb  starter.ipynb
src/mediqa_oe/: data.py
src/mediqa_oe/lm/: __init__.py  base.py  model.py
